--- a/static_media/assets/css/style.css
+++ b/static_media/assets/css/style.css
@@ -193,7 +193,7 @@ right:0px; z-index:-1;}
 .sf-arrows .sf-with-ul{padding-right:15px}
 .sf-arrows .sf-with-ul:after{content:"\f107";position:absolute;right:4px;font-family:FontAwesome;font-style:normal;font-weight:400}
 .sf-arrows ul .sf-with-ul:after{content:"\f105"}
-#nav-menu-container{float:right;margin:5px 0 0 0;}
+#nav-menu-container{margin:5px 0 0 0;}
 
 @media (min-width:1024px){
 #nav-menu-container{padding-right:0px}
